<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="265dp"
        android:layout_height="285dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="182dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/nombre" />

        <TextView
            android:id="@+id/txt_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/correo" />

        <TextView
            android:id="@+id/txt_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/direccion" />

        <TextView
            android:id="@+id/txt_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/telefono" />

        <TextView
            android:id="@+id/txt_fechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/fecha_nacimiento" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_salir2"
        android:layout_width="247dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="220dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_salirResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_salir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/btn_salir" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>