<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbl_bienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="267dp"
        android:layout_marginEnd="79dp"
        android:layout_marginRight="79dp"
        android:text="@string/lbl_bienvenido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="79dp"
        android:layout_marginBottom="372dp"
        android:text="@string/btn_aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_bienvenido" />

    <Button
        android:id="@+id/btn_salirMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="79dp"
        android:layout_marginRight="79dp"
        android:layout_marginBottom="372dp"
        android:text="@string/btn_salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_bienvenido" />
</androidx.constraintlayout.widget.ConstraintLayout>